Same fix for display on Firefox.

--- a/pageStyle.css
+++ b/pageStyle.css
@@ -143,10 +143,15 @@ body {
   position: absolute;
   top: 0;
   left; 0;
-  height: 100%;
-  width: 100%;
+  height: 600px;
+  width: 600px;
   z-index: 2;
   display: table;
+}
+
+.smallSized .circleDisplay .timeSelectorDisplay {
+  height: 300px;
+  width: 300px;
 }
 
 .circleDisplay .timeSelectorDisplay .btn.btn-default {
